--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Paranormal fiction'
 - !lcsh 'Supernatural -- Fiction'
+- GITenberg
 title: Les mille et un fantômes
 url: http://www.gutenberg.org/ebooks/15208
